First stage repeat initial commit
This includes some optimizations